--- a/heron/api/tests/java/BUILD
+++ b/heron/api/tests/java/BUILD
@@ -4,9 +4,9 @@ api_deps_files = [
     "//heron/common/src/java:utils-java",
     "//heron/common/src/java:basics-java",
     "//third_party/java:junit4",
+    "//third_party/java:mockito",
     "//third_party/java:powermock",
     "//third_party/java:kryo",
-    "@org_mockito_mockito_all//jar"
 ]
 
 api_deps_files = \
