Sync uhana branch with master (#10)

--- a/contrib/spouts/kafka/src/java/BUILD
+++ b/contrib/spouts/kafka/src/java/BUILD
@@ -2,6 +2,16 @@ licenses(["notice"])
 
 package(default_visibility = ["//visibility:public"])
 
+load("//tools/rules:build_defs.bzl", "DOCLINT_HTML_AND_SYNTAX")
+load("//tools/rules:javadoc.bzl", "java_doc")
+
+java_doc(
+    name = "heron-kafka-spout-javadoc",
+    libs = [":heron-kafka-spout-java"],
+    pkgs = ["org/apache/heron/spouts/kafka"],
+    title = "Kafka Spout Documentation",
+)
+
 kafka_spout_deps = [
     "//storm-compatibility/src/java:storm-compatibility-java-neverlink",
     "//heron/api/src/java:api-java-low-level",
@@ -14,5 +24,6 @@ kafka_spout_deps = [
 java_library(
     name = "heron-kafka-spout-java",
     srcs = glob(["org/apache/heron/spouts/kafka/**/*.java"]),
+    javacopts = DOCLINT_HTML_AND_SYNTAX,
     deps = kafka_spout_deps,
 )
