add javax dependencies

--- a/heron/tools/apiserver/src/java/BUILD
+++ b/heron/tools/apiserver/src/java/BUILD
@@ -44,6 +44,7 @@ apiserver_deps_files = \
   packing_deps_files + \
   uploader_deps_files + [
     "//third_party/java:cli",
+    "@javax_activation//jar",
     "@org_yaml_snakeyaml//jar",
     "//third_party/java:jetty-jersey-java",
     "//third_party/java:commons-compress",
