Replace std::unordered_map with tsl::hopscotch_map in tuple-cache.h

--- a/heron/stmgr/src/cpp/BUILD
+++ b/heron/stmgr/src/cpp/BUILD
@@ -61,6 +61,7 @@ cc_library(
         "//heron/proto:proto-cxx",
         "//heron/common/src/cpp/network:network-cxx",
         "//heron/common/src/cpp/config:config-cxx",
+        "@com_github_hopscotch_hashmap//:hopscotch-hashmap",
     ],
     linkstatic = 1,
 )
