Replaced std::hash with a faster xxhash implementation to speedup the topology if it uses fields-grouping strategy

--- a/heron/stmgr/src/cpp/BUILD
+++ b/heron/stmgr/src/cpp/BUILD
@@ -32,6 +32,7 @@ cc_library(
         "//config:config-cxx",
         "//heron/proto:proto-cxx",
         "//heron/common/src/cpp/network:network-cxx",
+        "@com_github_xxhash//:xxhash",
     ],
     linkstatic = 1,
 )
